--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
+OPENAI_API_KEY="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"
+
 MONGODB_URL="mongodb+srv://anmolkainat244:@reez@224@cluster0.jlu21nj.mongodb.net/?retryWrites=true&w=majority"
